--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <maven.compiler.target>17</maven.compiler.target>
         </properties>
     </profile>
+    <profile>
+        <id>Java21</id>
+        <properties>
+            <maven.compiler.source>21</maven.compiler.source>
+            <maven.compiler.target>21</maven.compiler.target>
+        </properties>
+    </profile>
   </profiles>
 
   <dependencies>
