--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,11 @@
   <name>mul_java</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
-  
+
+ <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
